--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.0.1+1
 repository: https://github.com/mpcreza/device_auto_rotate_checker
 
 environment:
-  sdk: '>=2.14.0 <3.0.0'
-  flutter: ">=2.5.0"
+  sdk: ^3.8.1
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
@@ -15,7 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   plugin:
