--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.device_auto_rotate_checker_example">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="device_auto_rotate_checker_example"
         android:name="${applicationName}"
