--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: device_auto_rotate_checker
 description: A flutter plugin to check if device auto rotate is on or off.
-version: 0.0.1+1
+version: 0.0.2
 repository: https://github.com/mpcreza/device_auto_rotate_checker
 
 environment:
